--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "dwp",
+  "name": "cwordpress",
   "description": "Get posts and users from a wordpress instance with WP REST API plugin",
-  "version": "1.1.1",
+  "version": "2.1.1",
   "homepage": "https://github.com/chuyengiawp/dwp",
   "license": "MIT",
   "readmeFilename": "README.md",
   "main": "src/lib.js",
   "dependencies": {
     "async": "^2.0.1",
-    "request": "^2.67.0"
+    "request": "^2.67.0",
+    "tangdrv": "1.0.4"
   },
   "repository": {
     "type": "git",
